objects/ssot__CareRequestDrug__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__RequestType__c</fullName>
        <label>Request Type</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Request Type</masterLabel>
            <refAttrDeveloperName>RequestType</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedUnitsQuantity__c</fullName>
        <label>Requested Units</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Requested Units</masterLabel>
            <refAttrDeveloperName>RequestedUnitsQuantity</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceCategoryCodeText__c</fullName>
        <label>Service Category Code</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Service Category Code</masterLabel>
            <refAttrDeveloperName>ServiceCategoryCodeText</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceCategoryText__c</fullName>
        <label>Service Category Text</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Service Category Text</masterLabel>
            <refAttrDeveloperName>ServiceCategoryText</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingFacilityId__c</fullName>
        <label>Servicing Facility</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Servicing Facility</masterLabel>
            <refAttrDeveloperName>ServicingFacilityId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingFacilityObject__c</fullName>
        <label>Servicing Facility Object</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Servicing Facility Object</masterLabel>
            <refAttrDeveloperName>ServicingFacilityObject</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingProviderId__c</fullName>
        <label>Servicing Provider</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Servicing Provider</masterLabel>
            <refAttrDeveloperName>ServicingProviderId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemIdentifier__c</fullName>
        <label>Source System Identifier</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Source System Identifier</masterLabel>
            <refAttrDeveloperName>SourceSystemIdentifier</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModified__c</fullName>
        <label>Source System Modified</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Source System Modified</masterLabel>
            <refAttrDeveloperName>SourceSystemModified</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystem__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Source System</masterLabel>
            <refAttrDeveloperName>SourceSystem</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StatusReason__c</fullName>
        <label>Status Reason</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Status Reason</masterLabel>
            <refAttrDeveloperName>StatusReason</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Status</masterLabel>
            <refAttrDeveloperName>Status</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StrengthText__c</fullName>
        <label>Strength</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Strength</masterLabel>
            <refAttrDeveloperName>StrengthText</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TherapyDurationQuantityUOMId__c</fullName>
        <label>Therapy Duration Unit of Measure</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Therapy Duration Unit of Measure</masterLabel>
            <refAttrDeveloperName>TherapyDurationQuantityUOMId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TherapyDuration__c</fullName>
        <label>Therapy Duration</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Therapy Duration</masterLabel>
            <refAttrDeveloperName>TherapyDuration</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716577148537_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequestDrug_DrugCodeId_map_CodeS_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>CareRequestDrug_DrugCodeId_map_CodeS_rel</relationshipLabel>
        <relationshipName>rel_1716577148537_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716577150763_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequestDrug_MedicationCodeId_map_rel</label>
        <referenceTo>ssot__Medication__dlm</referenceTo>
        <relationshipLabel>CareRequestDrug_MedicationCodeId_map_rel</relationshipLabel>
        <relationshipName>rel_1716577150763_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716577152911_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequestDrug_MedicationReferenceI_rel</label>
        <referenceTo>ssot__PatientMedicationStatement__dlm</referenceTo>
        <relationshipLabel>CareRequestDrug_MedicationReferenceI_rel</relationshipLabel>
        <relationshipName>rel_1716577152911_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <masterLabel>Care Request Drug</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Care Request</referenceEntityGroup>
        <referenceEntityName>CareRequestDrug</referenceEntityName>
        <referenceEntitySubjectArea>Care Request</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>